adjust index.html layout

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -133,12 +133,19 @@ strong {
   font-weight: bold;
 }
 
+li {
+  margin: 0 auto;
+  max-width: 300px;
+  padding: 5px;
+  margin: 10px 0 10px 0;
+}
+
 img {
   position: relative;
   margin: 0 auto;
   max-width: 739px;
   padding: 5px;
-  margin: 10px 0 10px 0;
+  margin: 10px 0 -13px 0;
   border: 1px solid #ebebeb;
 
   box-shadow: 0 0 5px #ebebeb;
