--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,17 @@
     <script src="{{ site.url }}/static/js/html5.js" type="text/javascript"></script>
     <![endif]-->
     <script src="{{ site.url }}/static/js/jquery.js" type="text/javascript"></script>
+	
+	<!-- 百度统计 -->
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "//hm.baidu.com/hm.js?211198ce1b9ef9c5a239d75388e6f12f";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" class="home blog lotus index">
     <nav class="lotus-nav">
